removed duplicated code

--- a/OOP labs/FileManager/FileManager/FileManager.csproj
+++ b/OOP labs/FileManager/FileManager/FileManager.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command.cs" />
+    <Compile Include="NameCreator.cs" />
     <Compile Include="FileManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
